[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reference-api-buddy"
version = "0.4.3"
description = "HTTP caching proxy module for development environments with reference APIs"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Reference API Buddy Team", email = "tinkermonkey25@gmail.com"}
]
maintainers = [
    {name = "Reference API Buddy Team", email = "tinkermonkey25@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: Proxy Servers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
]
keywords = ["proxy", "caching", "api", "http", "development", "rate-limiting"]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.32.0",
    "urllib3>=2.5.0",
    "certifi>=2025.8.0",
    "charset-normalizer>=3.4.0",
    "idna>=3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-timeout>=2.1",
    "black>=23.0",
    "isort>=5.12",
    "flake8>=6.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
    "autopep8>=2.3.0",
    "build>=1.3.0",
    "coverage>=7.10.0",
    "twine>=6.1.0",
    "typing-extensions>=4.14.0",
    "pip-audit>=2.9.0",
]
docs = [
    "sphinx>=6.0",
    "sphinx-rtd-theme>=1.3",
    "myst-parser>=2.0",
]

[project.urls]
Homepage = "https://github.com/tinkermonkey/reference-api-buddy"
Repository = "https://github.com/tinkermonkey/reference-api-buddy"
Issues = "https://github.com/tinkermonkey/reference-api-buddy/issues"
Changelog = "https://github.com/tinkermonkey/reference-api-buddy/blob/main/CHANGELOG.md"

[project.scripts]
api-buddy = "reference_api_buddy.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["reference_api_buddy*"]
exclude = ["tests*", "docs*", "build*"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["reference_api_buddy"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
